--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">فيكترا</string>
-    <string name="app_version">v2.9.1c</string>
+    <string name="app_version">v2.9.1d</string>
     <string name="qemu_version">qemu-8.2.1-3dfx</string>
     <string name="str_home">الرئيسية</string>
     <string name="str_logger">سجل</string>
@@ -486,7 +486,7 @@
     <string name="error">خطأ!</string>
     <string name="done">تم!</string>
     <string name="are_removed_successfully">تم الإزالة بنجاح!</string>
-    <string name="free_palestine">فلسطين حرة</string>
+    <string name="teams">Vectras VM team and Nguyen Bao An Bui</string>
     <string name="repository">المستودع</string>
     <string name="telegram_channel">قناة تليجرام</string>
     <string name="youtube">يوتيوب</string>
@@ -497,4 +497,5 @@
     <string name="set">ضبط</string>
     <string name="change_app_locale">تغيير لغة التطبيق</string>
     <string name="are_you_sure_you_want_to_shutdown_vm">هل أنت متأكد أنك تريد إيقاف الآلة الإفتراضية؟</string>
+    <string name="getit">يحصل</string>
 </resources>
