--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">فيكترا</string>
-    <string name="app_version">v2.9.1k</string>
+    <string name="app_version">v2.9.1l</string>
     <string name="qemu_version">أحدث</string>
     <string name="str_home">الرئيسية</string>
     <string name="str_logger">سجل</string>
