--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">فيكترا</string>
-    <string name="app_version">v2.9.1l</string>
-    <string name="qemu_version">أحدث</string>
+    <string name="app_version">v2.9.1m</string>
+    <string name="qemu_version">مستقر</string>
     <string name="str_home">الرئيسية</string>
     <string name="str_logger">سجل</string>
     <string name="fab_info">بدء المحاكاة</string>
@@ -516,4 +516,10 @@
     <string name="killqemu">اقتل QEMU</string>
     <string name="installing">جاري التثبيت...</string>
     <string name="vncdisplay">عرض VNC</string>
+    <string name="setup_sound">إعداد الصوت لـ Termux</string>
+    <string name="setup_sound_guide_content">يتيح هذا للآلات الافتراضية التي تعمل على VM Vectras تشغيل الصوت باستخدام Termux. إذا لم تقم بإعداد Termux بعد، فحدد بدء الإعداد، وسيتم نسخ الأمر تلقائيًا إلى الحافظة، وتحتاج إلى لصق هذا الأمر وتشغيله في Termux لإكمال الإعداد. في المرة القادمة، تأكد من تشغيل Termux لتشغيل الصوت.</string>
+    <string name="copied">تم نسخها</string>
+    <string name="start_setup">بدء الإعداد</string>
+    <string name="termux_is_not_installed">لم يتم تثبيت Termux</string>
+    <string name="you_need_to_install_termux">تحتاج إلى تثبيت Termux قبل الإعداد.</string>
 </resources>
