--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Vectras VM</string>
-    <string name="app_version" translatable="false">v2.9.1l</string>
-    <string name="qemu_version" translatable="false">Latest</string>
+    <string name="app_version" translatable="false">v2.9.1m</string>
+    <string name="qemu_version" translatable="false">Stable</string>
     <string name="str_home">Home</string>
     <string name="str_logger">Logger</string>
     <string name="fab_info">Start Emulation</string>
@@ -234,7 +234,7 @@
     <string name="preferences_button_text">   Preferences   </string>
     <string name="extra_keys_config_desc">Here you can set value of extra-keys variable like in Termux app (read <a href="http://wiki.termux.com/wiki/Touch_Keyboard#Extra_Keys_Row">this</a>) and more (e.g. META).
     Put empty string for the default value.</string>
-    <string name="install">INSTALL</string>
+    <string name="install">Install</string>
     <string name="select_tar">SELECT (.TAR.GZ)</string>
     <string name="not_selected_yet">not selected yet.</string>
     <string name="modify">MODIFY</string>
@@ -528,4 +528,10 @@
     <string name="killqemu">Kill QEMU</string>
     <string name="installing">Installing...</string>
     <string name="vncdisplay">VNC display</string>
+    <string name="setup_sound">Setup sound for Termux</string>
+    <string name="setup_sound_guide_content">This enables virtual machines running on the Vectras VM to play audio using Termux. If you have not set up Termux yet, select Start setup, the command will be automatically copied to the clipboard, you need paste that command and run it in Termux to complete the setup. Next times, make sure Termux is running to play sound.</string>
+    <string name="copied">Copied.</string>
+    <string name="start_setup">Start setup</string>
+    <string name="termux_is_not_installed">Termux is not installed</string>
+    <string name="you_need_to_install_termux">You need to install Termux before setting up.</string>
 </resources>
