--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">فيكترا</string>
-    <string name="app_version">v2.9.1n</string>
+    <string name="app_version">v2.9.1o</string>
     <string name="qemu_version">مستقر</string>
     <string name="str_home">الرئيسية</string>
     <string name="str_logger">سجل</string>
@@ -522,4 +522,5 @@
     <string name="start_setup">بدء الإعداد</string>
     <string name="termux_is_not_installed">لم يتم تثبيت Termux</string>
     <string name="you_need_to_install_termux">تحتاج إلى تثبيت Termux قبل الإعداد.</string>
+    <string name="wating_for_you">في انتظاركم...</string>
 </resources>
