--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -561,4 +561,16 @@
     <string name="allow">Allow</string>
     <string name="cannot_create_VM_at_this_time">Cannot create VM at this time.</string>
     <string name="no_data">No data.</string>
+    <string name="roms_store">Roms store</string>
+    <string name="available">Available</string>
+    <string name="unavailable">Unavailable</string>
+    <string name="installed">Installed</string>
+    <string name="kill_all">Kill all</string>
+    <string name="do_you_want_to_kill_all_qemu_processes">Do you want to kill all Qemu processes?</string>
+    <string name="all_running_vms_will_be_forcibly_shut_down">All running VMs will be forcibly shut down.</string>
+    <string name="total_memory">Total: </string>
+    <string name="used_memory">Used: </string>
+    <string name="free_memory">Free: </string>
+    <string name="used">used</string>
+    <string name="there_is_nothing_here_because_there_is_no_vm_running">There is nothing here because there is no VM running.</string>
 </resources>
