--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -231,7 +231,7 @@
     <string name="input">إدخال</string>
     <string name="tiny_vterm">Tiny vterm</string>
     <string name="try_again">حاول مجدداً</string>
-    <string name="logs">سجلات</string>
+    <string name="logs">السجلات</string>
     <string name="options">خيارات</string>
     <!-- وحدة التحكم XServer XSDL -->
     <string name="init">جاري التهيئة</string>
@@ -445,7 +445,7 @@
     <string name="qemu">QEMU</string>
     <string name="arch">المعمارية:</string>
     <string name="running">يعمل</string>
-    <string name="stopped">متوقف</string>
+    <string name="stopped">متوقفة</string>
     <string name="service">الخدمة:</string>
     <string name="free_palistine">فلسطين حرة</string>
     <string name="store">المتجر</string>
@@ -511,13 +511,13 @@
     <string name="cpu">المعالج</string>
     <string name="save_changes">حفظ التغييرات</string>
     <string name="qemu_create_cmd">إنشاء أمر QEMU</string>
-    <string name="getit">يحصل</string>
+    <string name="getit">الحصول عليه</string>
     <string name="adddrivenote">تأكد من تحديد القرص المضغوط أو القرص ROM الذي سيتم تشغيل نظام التشغيل منه. قد لا تحتاج إلى تحديده إذا أضفته إلى معلمات QEMU.</string>
     <string name="killqemu">اقتل QEMU</string>
     <string name="installing">جاري التثبيت...</string>
     <string name="vncdisplay">عرض VNC</string>
-    <string name="setup_sound">إعداد الصوت لـ Termux</string>
-    <string name="setup_sound_guide_content">يتيح هذا للآلات الافتراضية التي تعمل على VM Vectras تشغيل الصوت باستخدام Termux. إذا لم تقم بإعداد Termux بعد، فحدد بدء الإعداد، وسيتم نسخ الأمر تلقائيًا إلى الحافظة، وتحتاج إلى لصق هذا الأمر وتشغيله في Termux لإكمال الإعداد. في المرة القادمة، تأكد من تشغيل Termux لتشغيل الصوت.</string>
+    <string name="setup_sound">إعداد الصوت لـTermux</string>
+    <string name="setup_sound_guide_content">يتيح هذا للأجهزة الافتراضية التي تعمل على VM Vectras تشغيل الصوت باستخدام Termux. إذا لم تقم بإعداد Termux بعد، فحدد بدء الإعداد، وسيتم نسخ الأمر تلقائيًا إلى الحافظة، وتحتاج إلى لصق هذا الأمر وتشغيله في Termux لإكمال الإعداد. في المرة القادمة، تأكد من تشغيل Termux لتشغيل الصوت.</string>
     <string name="copied">تم نسخها</string>
     <string name="start_setup">بدء الإعداد</string>
     <string name="termux_is_not_installed">لم يتم تثبيت Termux</string>
@@ -533,7 +533,7 @@
     <string name="need_fix_json_before_create">حدث خطأ في بيانات قائمة الأجهزة الظاهرية ولا يمكن إنشاء جهاز ظاهري جديد في هذا الوقت. لإنشاء جهاز ظاهري جديد، تحتاج إلى حذف جميع بيانات قائمة الأجهزة الظاهرية. هل تريد حذف الكل؟</string>
     <string name="problem_has_been_detected">تم اكتشاف المشكلة</string>
     <string name="you_have_not_added_any_storage_devices">لم تقم بإضافة أي أجهزة تخزين لبدء استخدام نظام التشغيل أو تثبيته. هل تريد الاستمرار في الإنشاء؟</string>
-    <string name="continuetext">يكمل</string>
+    <string name="continuetext">الاستمرار</string>
     <string name="need_set_name">يجب عليك إعطاء هذا الجهاز الظاهري اسمًا جديدًا.</string>
     <string name="can_not_use_mttcg">لا يمكن تشغيل الآلة الافتراضية لأن وحدة المعالجة المركزية أو نظام التشغيل Android على هاتفك لا يدعم 64 بت لاستخدام TCG متعدد الخيوط. هل تريد الاستمرار في تشغيل الآلة الافتراضية باستخدام TCG أحادي الخيط؟</string>
     <string name="VM_is_already_running">هذه الآلة الافتراضية قيد التشغيل بالفعل.</string>
@@ -554,7 +554,7 @@
     <string name="installed">تم التثبيت</string>
     <string name="kill_all">اقتل الجميع</string>
     <string name="do_you_want_to_kill_all_qemu_processes">هل تريد قتل كافة عمليات Qemu؟</string>
-    <string name="all_running_vms_will_be_forcibly_shut_down">سيتم إيقاف تشغيل جميع أجهزة VM قيد التشغيل قسراً.</string>
+    <string name="all_running_vms_will_be_forcibly_shut_down">سيتم إيقاف تشغيل جميع أجهزة VM قيد التشغيل بالقوة.</string>
     <string name="total_memory">المجموع:</string>
     <string name="used_memory">مستخدم:</string>
     <string name="free_memory">الموضوع:</string>
