--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Vectras VM</string>
-    <string name="app_version" translatable="false">v2.9.1w</string>
+    <string name="app_version" translatable="false">v2.9.1x</string>
     <string name="qemu_version" translatable="false">Stable</string>
     <string name="str_home">Home</string>
     <string name="str_logger">Logger</string>
@@ -497,11 +497,11 @@
     <string name="check_for_software_updates">CHECK FOR SOFTWARE UPDATES</string>
     <string name="night_mode">NIGHT MODE</string>
     <string name="description">Description</string>
-    <string name="qemu_website">QEMU WEBSITE</string>
-    <string name="powerpc_qemu">POWERPC QEMU</string>
-    <string name="arm64_qemu">ARM64 QEMU</string>
-    <string name="x86_64_qemu_recommended">x86_64 QEMU (RECOMMENDED)</string>
-    <string name="i386_qemu">I386 QEMU</string>
+    <string name="qemu_website">QEMU website</string>
+    <string name="powerpc_qemu">PowerPC</string>
+    <string name="arm64_qemu">ARM64</string>
+    <string name="x86_64_qemu_recommended">x86_64 (Recommended)</string>
+    <string name="i386_qemu">i386</string>
     <string name="export_rom">Export Rom</string>
     <string name="are_you_sure">Are you sure?</string>
     <string name="description_html_supported">DESCRIPTION (html supported)</string>
@@ -555,7 +555,7 @@
     <string name="create">Create</string>
     <string name="nothing_here">Nothing here</string>
     <string name="create_vm_now">Do you want to create a new virtual machine now?</string>
-    <string name="nothing_here_home">Tap the Create button at the bottom to start creating a new virtual machine.</string>
+    <string name="nothing_here_home">Tap the Create button at the bottom to start creating a new virtual machine. Or…</string>
     <string name="allow_access_to_storage">Allow access to storage</string>
     <string name="you_need_to_allow_access_to_the_storage_to_continue">You need to allow access to the storage to continue.</string>
     <string name="allow">Allow</string>
@@ -587,4 +587,8 @@
     <string name="from">From</string>
     <string name="error_CR_CVBI3">An error has occurred and cannot continue. The extraction was successful but the cvbi file does not contain information for this ROM and does not contain any ROM files. Error code: CR_CVBI3.</string>
     <string name="kept_some_files">Some files were retained because some other virtual machine needed them.</string>
+    <string name="clean_up">Clean up</string>
+    <string name="clean_up_content">ROMs, files and folders that are no longer in use will be deleted.</string>
+    <string name="go_to_rom_store">Go to ROM store</string>
+    <string name="want_to_learn_more_about_qemu">Want to learn more about QEMU?</string>
 </resources>
