--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Vectras VM</string>
-    <string name="app_version" translatable="false">v2.9.1y</string>
+    <string name="app_version" translatable="false">v2.9.1z</string>
     <string name="qemu_version" translatable="false">Stable</string>
     <string name="str_home">Home</string>
     <string name="str_logger">Logger</string>
@@ -591,4 +591,5 @@
     <string name="clean_up_content">ROMs, files and folders that are no longer in use will be deleted.</string>
     <string name="go_to_rom_store">Go to ROM store</string>
     <string name="want_to_learn_more_about_qemu">Want to learn more about QEMU?</string>
+    <string name="file_format_is_not_supported">Things may not work because the file format is not supported. Do you want to continue?</string>
 </resources>
